--- a/templates/katzen/manager/_menu_form.html.twig
+++ b/templates/katzen/manager/_menu_form.html.twig
@@ -6,8 +6,8 @@
 
       <div class="row g-3 mb-4">
         <div class="col-md-6">{{ form_row(form.name) }}</div>
-        <div class="col-md-6">{{ form_row(form.mealType) }}</div>
-        <div class="col-md-6">{{ form_row(form.statusTag) }}</div>
+        <div class="col-md-6">{{ form_row(form.meal_type) }}</div>
+        <div class="col-md-6">{{ form_row(form.status) }}</div>
         <div class="col-md-6 d-flex align-items-end">
           {{ form_row(form.current) }}
         </div>
