--- a/templates/katzen/recipe/build.html.twig
+++ b/templates/katzen/recipe/build.html.twig
@@ -1,8 +1,6 @@
-{% extends 'base.html.twig' %}
+{% extends 'katzen/base.html.twig' %}
 
-{% block title %}Katzen Recipe Builder{% endblock %}
-
-{% block body %}
+{% block main_content %}
 <div class="container py-5">
   <h2 class="mb-3">Build a New Recipe</h2>
   <p class="text-muted"></p>
