--- a/templates/katzen/recipe/create_recipe_flow.html.twig
+++ b/templates/katzen/recipe/create_recipe_flow.html.twig
@@ -1,8 +1,8 @@
-{% extends 'base.html.twig' %}
+{% extends 'katzen/base.html.twig' %}
 
 {% block title %}Katzen Recipe Builder{% endblock %}
 
-{% block body %}
+{% block main_content %}
 <script>
 document.addEventListener('DOMContentLoaded', () => {
     const container = document.querySelector('[data-prototype]');
