--- a/templates/katzen/recipe/show.html.twig
+++ b/templates/katzen/recipe/show.html.twig
@@ -1,8 +1,6 @@
-{% extends 'base.html.twig' %}
+{% extends 'katzen/base.html.twig' %}
 
-{% block title %}{{ recipe.title }}{% endblock %}
-
-{% block body %}
+{% block main_content %}
     <h1>{{ recipe.title }}</h1>
     <p>{{ recipe.summary }}</p>
 
