--- a/templates/katzen/recipe/import.html.twig
+++ b/templates/katzen/recipe/import.html.twig
@@ -1,8 +1,6 @@
-{% extends 'base.html.twig' %}
+{% extends 'katzen/base.html.twig' %}
 
-{% block title %}Import Recipe{% endblock %}
-
-{% block body %}
+{% block main_content %}
 <div class="container mt-4">
     <h2>Import Recipe</h2>
     <p>Select a file to upload or paste JSON below to import a recipe..</p>
@@ -13,6 +11,6 @@
         {{ form_row(form.submit) }}
     {{ form_end(form) }}
 
-    <a href="{{ path('app_recipe') }}" class="btn btn-secondary mt-3">Back to Dashboard</a>
+    <a href="{{ path('dashboard_home') }}" class="btn btn-secondary mt-3">Back to Dashboard</a>
 </div>
 {% endblock %}
